--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.3",
     "bootstrap": "^4.6.0",
+    "mongodb": "^3.6.4",
     "next": "10.0.7",
     "react": "17.0.1",
     "react-bootstrap": "^1.5.1",
