Create api "createAdmin"

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@material-ui/core": "^4.11.3",
     "bootstrap": "^4.6.0",
     "mongodb": "^3.6.4",
+    "mongoose": "^5.11.18",
     "next": "10.0.7",
     "react": "17.0.1",
     "react-bootstrap": "^1.5.1",
